# smpl

smpl/src/graph/: manip_lattice.cpp  manip_lattice_action_space.cpp
smpl/src/search/: arastar.cpp
smpl_ompl_interface/: .clang-format  CMakeLists.txt  package.xml
smpl_ompl_interface/include/smpl_ompl_interface/: ompl_interface.h
smpl_ompl_interface/src/: ompl_interface.cpp  smpl_ompl.cpp
